# afc-crs-lacrosse

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md
crs/code/dspy/: advice.py  code_scan.py  crash.py  custom_types.py  diff.py  diff_scan.py  gen_patch.py  git_fns.py  models.py  parse_reproduce.py  patching.py  pyproject.toml  record.py  respond_to_error_patterns.py  smoke_test.py  utils.py
crs/code/dspy/modules/: ask_yes_no.py  ask_yes_no_about_file_repair.py  ask_yes_no_about_vulnerability.py  characterize_bug.py  choose.py  choose_line.py  choose_lines.py  deduplicate_vulns.py  discover_vulns.py  discover_vulns_with_pov.py  discover_vulns_without_pov.py  extract_delta_functions.py  extract_functions.py  extract_repair_snippets.py  extract_sanitizer_stderr.py  extract_stack_trace.py  filter_strings.py  filter_strs_by_index.py  find_delta_files_and_functions.py  find_ftp_at_top_of_sanitizer.py  find_vuln_in_ftp.py  generate_dict_of_string_lists.py  implement_file_repair.py  map_strs.py  mixins.py  parallel_consensus.py  parse_diff_prioritized_filepaths.py  parse_sanitizer.py  parse_sanitizer_prioritized_filepaths.py  patch_vuln.py  patch_vulns.py  replan_file_repairs_for_vulns.py  rewrite_code_given_sanitizer.py  rewrite_func_given_sanitizer.py  rewrite_func_given_sanitizer_blob.py  rewrite_func_given_sanitizer_blob_delta.py  rewrite_func_given_sanitizer_blob_harness.py  rewrite_func_given_sanitizer_delta.py  scan_code_files_for_vulns.py  score_vuln.py  (+3 more)
crs/code/dspy/patch_progress_viz/: latest_data.json  pyproject.toml  server.py
terraform/: .gitignore
(+674 files in other folders)
